# JHS_soft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
calc/: argv.ini  mapping.txt  mapping1029.txt  prestal.txt
gui/inc/: mainwindow.h  mainwindow.ui  ui_mainwindow.h
gui/src/: mainwindow.cpp
gui/ui/: mainwindow.ui
inc/: LinkDef.h  clusters.hpp  data_strcut_cint.h  generate.h  unpack.h  util.hpp  wave_handler.h
script/: CMakeLists.txt
script/inc/: util.h
script/src/: draw_hitmap.cpp  draw_wave.cpp  util.cpp
src/: clusters.cpp  root_cint_out.cpp  root_cint_out_rdict.pcm  unpack.cpp  util.cpp
